Bug 146423 - "Tools > Options > LibreOffice > Application Colors" dialog's width grows each time the mouse moves or scrolls (Simplified Chinese UI) (Fedora 34 GTK3 only?)
Summary: "Tools > Options > LibreOffice > Application Colors" dialog's width grows eac...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha1+
Hardware: All Linux (All)
: low normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-Colours
  Show dependency treegraph
 
Reported: 2021-12-26 15:26 UTC by Kevin Suo
Modified: 2022-01-09 12:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (1.86 MB, video/webm)
2022-01-03 12:14 UTC, Kevin Suo
Details
screencast with patchset 3 (1.45 MB, video/webm)
2022-01-07 05:28 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2021-12-26 15:26:16 UTC
"Tools > Options > LibreOffice > Application Colors" dialog's width grows each time when I move the mouse to the right-edge of the dialog, or scrolls the touchpad.

Steps to Reproduce:
1. New Calc;
2. Go to "Tools > Options > LibreOffice > Application Colors" dialog.
3. Move your mouse to the right side of the dialog, or use the two-figure scroll on the touchpad.

Current Behaviour:
dialog's width grows each time when I move the mouse to the right-edge of the dialog, or scrolls the touchpad.

Expected:
The dialog width stays at it was.

It is weird that this only happens for me on Simplified Chinese UI. Reseting user profile does not work. 
I tested on Tranditional Chinese, English and even KeyID, but do not reproduce on these UIs. 

Bibisected and bisected to:

commit 2f706b1e91396cbe044c20fab79772dfc081a340
Author: Heiko Tietze <tietze.heiko@gmail.com>
Date:   Fri Aug 27 11:46:57 2021 +0200

    Improve accessibility for application color settings


Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 2f706b1e91396cbe044c20fab79772dfc081a340
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Build Platform: Fedora34@X64, Branch:master, bibisect-linux-64-7.3-CN
Calc: threaded

Fedora 34 x64, Gnome 40.4, Wayland.
Comment 1 Kevin Suo 2021-12-26 15:27:35 UTC
Adding Heiko Tietze to cc: would you please take a look? Thanks in advance.
Comment 2 V Stuart Foote 2021-12-26 18:23:18 UTC
If I change UI and local to Simplified Chinese on Windows builds I can not reproduce on Version: 7.3.0.1 (x64) / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

The Application Colors dialog allows mouse selection of the right edge (cursor change on mouse over), while on a touch screen I am able to select the edge of the dialog and drag it wider or narrower.

Functions the same en-US or zh-CN locale.
Comment 3 Kevin Suo 2021-12-27 03:22:27 UTC
This may be Linux GTK3 only.

Also tested with X11 instead of Wayland, but problem still exists, thus this is not Wayland related.
Comment 4 Kevin Suo 2021-12-27 04:26:47 UTC
Does not happen on Fedora 35. Set importance to LOW.
Comment 5 Heiko Tietze 2022-01-03 10:29:57 UTC
Gtk3 draws the vertical scrollbar over the content for me. Is this causing trouble in your environment? A screencast might help.
Comment 6 Kevin Suo 2022-01-03 12:14:22 UTC
Created attachment 177279 [details]
screencast
Comment 7 Heiko Tietze 2022-01-03 12:37:36 UTC
Caolan, any idea what causes this?
Comment 8 Caolán McNamara 2022-01-06 14:09:20 UTC
never saw that effect but I'd guess the problem is associated with AdjustHeaderBar getting called from the size-alloc handler and calling set_size_request inside that.

I don't have a F34 install to make this easy to reproduce, only F35. Though both appear to have gtk3-3.24.30-4
Comment 9 Caolán McNamara 2022-01-06 14:24:08 UTC
possibly https://gerrit.libreoffice.org/c/core/+/128051 makes a difference if someone who can reproduce this is able to build it
Comment 10 Kevin Suo 2022-01-06 15:15:42 UTC
This does not happen for me another PC with Fedora 34 and the same libreoffice version there, but does happen in my previous PC even with fresh profile. So I guess this has sth to do with the Gnome Profile?

I am building your patch and testing.
Comment 11 Kevin Suo 2022-01-07 05:28:19 UTC
Created attachment 177363 [details]
screencast with patchset 3
Comment 12 Caolán McNamara 2022-01-07 10:44:36 UTC
ok, that's encouraging. One more tweak which helps with the performance of shrinking added to the current effort.
Comment 13 Commit Notification 2022-01-07 13:54:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7df337b3636f9df9bf05d7f493e6c89e43c3f5ca

tdf#146423 don't set a size-request during a size-alloc

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Kevin Suo 2022-01-08 02:45:48 UTC
Verified fix on master branch.
Comment 15 Commit Notification 2022-01-09 12:40:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/0d373003a6a63c3e7e89266668ebc0b42eb2d294

tdf#146423 don't set a size-request during a size-alloc

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.