tdf#146423 don't set a size-request during a size-alloc

and use a better width calculation

Change-Id: Ib873a8ed9e6424c09630650af352ba5a20c674b5